# feedparq

./: .gitignore  LICENSE  README.md
assets-feedparq-club/: package-lock.json  package.json  wrangler.toml
assets-feedparq-club/src/: index.js
feedparq-club/: package-lock.json  package.json  wrangler.toml
feedparq-club/functions/: [[all]].js  slugs.json
feedparq-club/public/: index.html  main.js  styles.css
feedparq-club/public/settings/: index.html  settings.js
feedparq-club/public/wtf/: index.html
feedparq-club/scripts/: build-slugs-file.js
feedparq-rs/: .gitignore  Cargo.toml
feedparq-rs/config/: distributed-systems  local-first  machine-learning  news  scottish-culture
feedparq-rs/feeds/: blog-feed.xml  swhrss.xml  videos.xml
feedparq-rs/src/: lib.rs  main.rs
