[package]
name = "feedparq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4.38"
feed-rs = "2.0.0"
futures = "0.3"
metrics = "0.23.0"
metrics-sqlite = "0.4.1"
polars = { version = "0.41.3", features = ["lazy", "parquet"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "time"] }
url = "2.2.2"
